# StremioX

./: .gitignore  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  ROADMAP.md
.github/workflows/: release-tvos.yml
app/: project.yml
app/Resources/: Info-iOS.plist
app/ResourcesTV/: Info-tvOS.plist
app/Sources/: ContentView.swift  ExternalPlayer.swift  NodeServer.swift  PlayerScreen.swift  ShareSheet.swift  StremioWebView.swift  StremioXApp.swift
app/SourcesShared/: Addon.swift  AddonsView.swift  CoreBridge.swift  CoreModels.swift  DiagnosticsLog.swift  Keychain.swift  LastStreamStore.swift  LinkAuthService.swift  LinkLoginView.swift  MacNodeServer.swift  ProfileSync.swift  Profiles.swift  ProfilesView.swift  SplashView.swift  StreamRanking.swift  StremioAccount.swift  StremioServer.swift  Theme.swift  ThemeManager.swift  TorrentTrackers.swift  UpdateChecker.swift
app/SourcesTV/: AddonsView.swift  ChipButtonStyle.swift  CoreBridge.swift  CoreModels.swift  DetailView.swift  DiscoverView.swift  HomeView.swift  Keychain.swift  LibraryView.swift  LinkLoginView.swift  LoginView.swift  OpenLinkView.swift  ProfilesView.swift  RootTabView.swift  SearchView.swift  ServerConfigView.swift  SettingsView.swift  SharedUI.swift  StreamLinkQR.swift  (+6 more)
core/: Cargo.toml  rust-toolchain.toml
core/include/: module.modulemap  stremiox_core.h
core/src/: env.rs  lib.rs  model.rs
desktop/: index.html
docs/: PLAN.md  PLAYER-CONTROLS-DEBUG.md  REBASE-stremio-core.md
scripts/: build-core-xcframework.sh  build-web.sh  fetch-server-deps.sh  make-logo.py  repackage-ipa.sh
(+36 files in other folders)
